--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -26,7 +27,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "usecount-ts": "^0.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,6 +36,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/react-native": "^12.1.2",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
@@ -44,7 +47,9 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-bundle-visualizer": "^3.1.3",
     "react-test-renderer": "18.2.0",
+    "reassure": "^0.9.0",
     "typescript": "4.8.4"
   },
   "jest": {
